--- a/log-beta.html
+++ b/log-beta.html
@@ -335,7 +335,7 @@
                     else {
                         let nameFilters = condition.split("&");
                         nameFilters.forEach(nf => {
-                            subData = subData.filter(s => new RegExp(`!${nf}`).test(s.text)));
+                            subData = subData.filter(s => new RegExp(`!${nf}`).test(s.text));
                         });
                     }
                     break;
