--- a/log-beta.html
+++ b/log-beta.html
@@ -462,8 +462,8 @@
         summaryList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
         let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}]\n\nTotal ${total}\n\n[Summary]\n`;
         summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}`);
-        message = `${message}\n\n[Details]`;
-        summaryList.forEach(sl => message = `${message}\n\n${sl.category} ${sl.value}\n${sl.detail}`);
+        message = `${message}\n\n[Details]\n`;
+        summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}\n${sl.detail}`);
         showData(message);
         showStatus(summaryList.length, true);
     }
