--- a/log-beta.html
+++ b/log-beta.html
@@ -272,7 +272,7 @@
         let site = all[0];
         let param = all.length > 1 ? content.substring(site.length + 1) : "";
         let links = notes.filter(n => n.tags.includes("#link"));
-        let link = links.find(n => new RegExp(`!${site}`).test(n.text));
+        let link = links.find(n => new RegExp(`(^|\\s+)!${site}($|\\s+)`).test(n.text));
         
         if (!link) {
             showStatus("failed", true);
