--- a/log-beta.html
+++ b/log-beta.html
@@ -533,7 +533,7 @@
                     message = `${message}- ${i}\n`;
                 });
             });
-            message = `${message}${isoToString(d.date)}\n`;
+            message = `${message}\n`;
         });
         showData(message);
         showStatus(subList.length, true);
