--- a/log-beta.html
+++ b/log-beta.html
@@ -522,7 +522,7 @@
         });
         subList.forEach(d => {
             d.tasks.sort();
-            d.tasks.forEach(t => t.items.sort();
+            d.tasks.forEach(t => t.items.sort());
         });
         let message = "";
         subList.forEach(d => {
