--- a/log-beta.html
+++ b/log-beta.html
@@ -49,7 +49,7 @@
 
     window.addEventListener("load", () => {
         loadNotes();
-        processData(".task date:today");
+        processData(".task today");
     });
 
     document.addEventListener("click", (event) => document.getElementById("tb").focus());
