--- a/log-beta.html
+++ b/log-beta.html
@@ -555,9 +555,9 @@
             d.tasks.forEach(t => {
                 // message = `${message}${t.name}\n`;
                 t.items.forEach(i => {
-                    message = `${message}- ${i}\n`;
+                    message = `${message}- ${i} (${t.name})\n`;
                 });
-                message = `${message}\n`;
+                // message = `${message}\n`;
             });
         });
         showData(message);
