--- a/log-beta.html
+++ b/log-beta.html
@@ -655,7 +655,7 @@
             }
             case "weekend": {
                 let noOfDays = 6 - date.getDay();
-                date.setDate(date.getDate() + (noOfDays > 0 ? noOfDays : 7)));
+                date.setDate(date.getDate() + (noOfDays > 0 ? noOfDays : 7));
                 break;
             }
             case "month": {
