--- a/log-beta.html
+++ b/log-beta.html
@@ -236,7 +236,7 @@
             return;
         }
 
-        let filtered = filterData(`tag:!${iddenTag}+${content}`);
+        let filtered = filterData(`tag:!${hiddenTag}+${content}`);
         let toHide = notes.filter(n => filtered.some(f => f.date == n.date && f.text == n.text));
         toHide.forEach(th => {
             th.tags.push(`#${hiddenTag}`);
