--- a/log-beta.html
+++ b/log-beta.html
@@ -381,7 +381,7 @@
 
     doClear = () => { showData(""); showStatus("done", true); }
 
-    doText = (content) {
+    doText = (content) => {
         if (!content) {
            showStatus("failed", true);
            return;
