--- a/log-beta.html
+++ b/log-beta.html
@@ -186,7 +186,7 @@
             }            
             case ".text": {
                 showStatus(action);
-                doResult(content);
+                doText(content);
                 break;
             }
             default: {
