--- a/log-beta.html
+++ b/log-beta.html
@@ -410,6 +410,9 @@
                 showStatus("done", true);
                 break;
             }
+            default: {
+                showStatus("failed", true);
+            }
         }
     }
 
