--- a/log-beta.html
+++ b/log-beta.html
@@ -67,7 +67,7 @@
     });
 
     document.getElementById("tb").addEventListener("focus", (event) => {
-        editDiv(true);
+        editDiv(false);
         textMode = false;
     });
 
